# multi-agent-system

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/agents/: escritor_agent.py  pesquisador_agent.py  revisador_agent.py
src/api/: routes.py
src/models/: artigo_model.py
src/services/: crew_service.py
src/tools/: wikipedia_tool.py
