[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Sistema multiagente para geração automática de artigos utilizando CrewAI."
authors = [
    { name = "Kelvin Floriano", email = "kelvin_floriano99@hotmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "crewai>=0.28.8",
    "crewai-tools>=0.1.6",
    "langchain_community>=0.0.29",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "crewai[google-genai]",
    "google-generativeai"
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
